--- a/week04/memory_game/src/UI.module.css
+++ b/week04/memory_game/src/UI.module.css
@@ -40,7 +40,7 @@ button {
   perspective: 1000px;
 }
 
-.flipped.flip_card_inner {
+.flip_card_inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -50,7 +50,7 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.active.flip_card_inner {
+.flipped.flip_card_inner {
   transform: rotateY(180deg);
 }
 
