--- a/midterm/src/styles.css
+++ b/midterm/src/styles.css
@@ -6,102 +6,156 @@
 }
 
 @media only screen and (max-width: 600px) {
-
   body {
-      background-color: #b2d7ef;
-      color: #1e3569;
-    }
-  
-    .create-form {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin: 10px 0px 10px 0px;
-    }
+    background-color: #b2d7ef;
+    color: #1e3569;
+  }
 
-    .edit-form {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-  
-    label {
-      font-size: 20px;
-    }
-  
-    .title {
-      flex-grow: 2;
-      margin-left: 2px;
-      margin-right: 10px;
-      padding: 10px 20px;
-      border: 0.5px none;
-      border-radius: 20px;
-      font-size: 14px;
-      color: #1e3569;
-    }
-    
-    .priority {
-      flex-grow: 2;
-      width: 30px;
-      margin: 2px;
-      padding: 10px 20px;
-      border: 0.5px none;
-      border-radius: 20px;
-      font-size: 14px;
-      color:#1e3569;
-    }
+  .create-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0px 10px 0px;
+  }
 
-    input:focus {
-      outline: none;
-    }
+  .edit-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-    input[type=number]::-webkit-inner-spin-button {
-    opacity: 1
-    }
-  
-    button {
-      background-color: #008cba;
-      margin-left: 2px;
-      border: none;
-      border-radius: 20px;
-      color: white;
-      padding: 10px 20px;
-      text-align: center;
-      font-size: 14px;
-    }
-  
-    .todo-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: white;
-      padding: 5px;
-      margin-bottom: 5px;
-      border-radius: 5px;
-    }
+  label {
+    font-size: 20px;
+  }
 
-    .todo-content {
-      display: flex;
-      align-items: center;
-    }
-    
-    .toggle-complete {
-      height: 15px;
-      width: 15px;
-      border-radius: 50%;
-      border: 2px solid gray;
-      margin-right: 10px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+  .title {
+    flex-grow: 2;
+    margin-left: 2px;
+    margin-right: 10px;
+    padding: 10px 20px;
+    border: 0.5px none;
+    border-radius: 20px;
+    font-size: 14px;
+    color: #1e3569;
+  }
 
-    .toggle-complete.completed {
-      border: 2px solid #008cba;
-      background-color: #008cba;
-    }
+  .priority {
+    flex-grow: 2;
+    width: 30px;
+    margin: 2px;
+    padding: 10px 20px;
+    border: 0.5px none;
+    border-radius: 20px;
+    font-size: 14px;
+    color: #1e3569;
+  }
 
-    h3 {
-      margin: 0;
-    }
+  input:focus {
+    outline: none;
+  }
 
+  input[type='number']::-webkit-inner-spin-button {
+    opacity: 1;
+  }
+
+  button {
+    background-color: #008cba;
+    margin-left: 2px;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 14px;
+  }
+
+  .todo-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+  }
+
+  .todo-content {
+    display: flex;
+    align-items: center;
+  }
+
+  .toggle-complete {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border: 2px solid gray;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .toggle-complete.completed {
+    border: 2px solid #008cba;
+    background-color: #008cba;
+  }
+
+  h3 {
+    margin: 0;
+  }
+
+  .toast-container-wrapper {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .toast-container {
+    background-color: #ffffff;
+    color: #000;
+    margin: 8px 30px 0px 30px;
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    position: relative;
+    pointer-events: auto;
+  }
+
+  .toast-message {
+    padding: 5px 30px 5px 5px;
+    flex-grow: 1;
+  }
+
+  .toast-close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
+    background-color: transparent;
+    color: #6b7280;
+    transition: color 0.3s;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .toast-close-button:hover {
+    color: #000;
+  }
+
+  #portal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1000;
+  }
 }
